Add 773 (Part of) and 852 (Location) mappings

--- a/mappings/recap-discovery/field-mapping-bib.json
+++ b/mappings/recap-discovery/field-mapping-bib.json
@@ -580,6 +580,16 @@
       }
     ]
   },
+  "Part of": {
+    "pred": "nypl:partOf",
+    "jsonLdKey": "partOf",
+    "paths": [
+      {
+        "marc": 773",
+        "subfields": ["i", "a", "s", "t", "b", "m", "d", "h", "k", "n", "g", "r", "u", "x", "y", "z", "w", "3", "7"]
+      }
+    ]
+  },
   "Place of publication": {
     "pred": "nypl:placeOfPublication",
     "jsonLdKey": "placeOfPublication",
