--- a/mappings/recap-discovery/field-mapping-item.json
+++ b/mappings/recap-discovery/field-mapping-item.json
@@ -98,6 +98,10 @@
     "paths": [
       {
         "marc": "location.code"
+      },
+      {
+        "marc": "852",
+        "subfields": [ "b" ]
       }
     ]
   },
