Adding in 264 marc field for place of publication

--- a/mappings/recap-discovery/field-mapping-bib.json
+++ b/mappings/recap-discovery/field-mapping-bib.json
@@ -599,6 +599,12 @@
         "subfields": [
           "a"
         ]
+      },
+      {
+        "marc": "264",
+        "subfields": [
+          "a"
+        ]
       }
     ]
   },
