Bugfix — adding publisher, as I was supposed to in the first place, as well as PlaceOfPublication, which is needed, but done accidentally.

--- a/mappings/recap-discovery/field-mapping-bib.json
+++ b/mappings/recap-discovery/field-mapping-bib.json
@@ -618,6 +618,13 @@
           "b"
         ],
         "nyplSources": []
+      },
+      {
+        "marc": "264",
+        "subfields": [
+          "b"
+        ],
+        "nyplSources": []
       }
     ]
   },
@@ -627,6 +634,12 @@
     "paths": [
       {
         "marc": "260",
+        "subfields": [
+          "b"
+        ]
+      },
+      {
+        "marc": "264",
         "subfields": [
           "b"
         ]
