SRCH-123 Adding pred and jsonLdKey to Genre/Form literal.

--- a/mappings/recap-discovery/field-mapping-bib.json
+++ b/mappings/recap-discovery/field-mapping-bib.json
@@ -203,8 +203,8 @@
     ]
   },
   "Genre/Form literal": {
-    "pred": "",
-    "jsonLdKey": "",
+    "pred": "nypl:genreForm",
+    "jsonLdKey": "genreForm",
     "paths": [
       {
         "marc": "655",
