Add tableOfContents mapping to field-mapping-bib
https://jira.nypl.org/browse/SRCH-122

--- a/mappings/recap-discovery/field-mapping-bib.json
+++ b/mappings/recap-discovery/field-mapping-bib.json
@@ -51,6 +51,16 @@
       }
     ]
   },
+  "Contents": {
+    "pred": "dcterms:tableOfContents",
+    "jsonLdKey": "tableOfContents",
+    "paths": [
+      {
+        "marc": "505",
+        "subfields": ["a"]
+      }
+    ]
+  },
   "Carrier type": {
     "pred": "bf:carrier",
     "jsonLdKey": "carrier",
