Add indexPropertyName, field-mapping README
This adds:
 - First use of indexPropertyName in bib field mapping to support
   divergent index properties and json-ld keys (for re-mapped `note`
   field)
 - New `mappings/recap-discovery/README.md` to document rationale and
   usage of bib & item field mapping documents

--- a/mappings/recap-discovery/field-mapping-bib.json
+++ b/mappings/recap-discovery/field-mapping-bib.json
@@ -327,6 +327,7 @@
   },
   "Note": {
     "pred": "bf:note",
+    "indexPropertyName": "noteV2",
     "jsonLdKey": "note",
     "paths": [
       {
