--- a/mappings/recap-discovery/field-mapping-bib.json
+++ b/mappings/recap-discovery/field-mapping-bib.json
@@ -326,7 +326,8 @@
     ]
   },
   "Note": {
-    "pred": "skos:note",
+    "pred": "bf:note",
+    "indexPropertyName": "noteV2",
     "jsonLdKey": "note",
     "paths": [
       {
@@ -657,13 +658,6 @@
           "a"
         ],
         "description": "Source of Description Note"
-      },
-      {
-        "marc": "590",
-        "subfields": [
-          "a"
-        ],
-        "description": ""
       },
       {
         "marc": "591",
