--- a/mappings/recap-discovery/field-mapping-bib.json
+++ b/mappings/recap-discovery/field-mapping-bib.json
@@ -778,6 +778,10 @@
     "jsonLdKey": "seriesStatement",
     "paths": [
       {
+        "marc": "440",
+        "subfields": ["3","a","x","v","l"]
+      },
+      {
         "marc": "490",
         "subfields": ["3","a","x","v","l"]
       }
