Revert "Revert "Pb/mapping changes""
This reverts commit 0643f19666489af7d90e956c530a5874da936011.

Trying to revert the reversion

--- a/mappings/recap-discovery/field-mapping-bib.json
+++ b/mappings/recap-discovery/field-mapping-bib.json
@@ -339,7 +339,8 @@
     ]
   },
   "Note": {
-    "pred": "skos:note",
+    "pred": "bf:note",
+    "indexPropertyName": "noteV2",
     "jsonLdKey": "note",
     "paths": [
       {
@@ -670,13 +671,6 @@
           "a"
         ],
         "description": "Source of Description Note"
-      },
-      {
-        "marc": "590",
-        "subfields": [
-          "a"
-        ],
-        "description": ""
       },
       {
         "marc": "591",
