--- a/mappings/recap-discovery/field-mapping-bib.json
+++ b/mappings/recap-discovery/field-mapping-bib.json
@@ -13,29 +13,24 @@
     "jsonLdKey": "titleAlt",
     "paths": [
       {
-        "marc": "130",
-        "subfields": [ "a", "b", "f", "n", "p" ],
-        "description": "Varying Form of Title"
-      },
-      {
         "marc": "210",
-        "subfields": [ "a", "b", "f", "n", "p" ],
-        "description": "Varying Form of Title"
+        "subfields": [ "a", "b", "f", "n", "p" ]
       },
       {
         "marc": "222",
-        "subfields": [ "a", "b", "f", "n", "p" ],
-        "description": "Varying Form of Title"
+        "subfields": [ "a", "b", "f", "n", "p" ]
       },
       {
         "marc": "240",
-        "subfields": [ "a", "b", "f", "n", "p" ],
-        "description": "Varying Form of Title"
+        "subfields": [ "a", "b", "f", "n", "p" ]
       },
       {
         "marc": "246",
-        "subfields": [ "a", "b", "f", "n", "p" ],
-        "description": "Varying Form of Title"
+        "subfields": [ "a", "b", "f", "n", "p" ]
+      },
+      {
+        "marc": "740",
+        "subfields": [ "a", "n", "p" ]
       }
     ]
   },
@@ -209,6 +204,16 @@
       {
         "marc": "300",
         "subfields": [ "a", "b" ]
+      }
+    ]
+  },
+  "Former title": {
+    "pred": "nypl:formerTitle",
+    "jsonLdKey": "formerTitle",
+    "paths": [
+      {
+        "marc": "247",
+        "subfields": [ "a", "b", "f", "g", "n", "p" ]
       }
     ]
   },
@@ -784,6 +789,18 @@
       {
         "marc": "490",
         "subfields": ["3","a","x","v","l"]
+      },
+      {
+        "marc": "800",
+        "subfields": [ "a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v" ]
+      },
+      {
+        "marc": "810",
+        "subfields": [ "a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v" ]
+      },
+      {
+        "marc": "811",
+        "subfields": [ "a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v" ]
       }
     ]
   },
@@ -879,6 +896,14 @@
       {
         "marc": "240",
         "subfields": ["a","d","f","g","k","l","m","n","o","p","r","s"]
+      },
+      {
+        "marc": "730",
+        "subfields": ["a","d","f","g","k","l","m","n","o","p","r","s", "t"]
+      },
+      {
+        "marc": "830",
+        "subfields": ["a","d","f","g","k","l","m","n","o","p","r","s", "t", "v"]
       }
     ]
   },
