--- a/mappings/recap-discovery/field-mapping-bib.json
+++ b/mappings/recap-discovery/field-mapping-bib.json
@@ -268,19 +268,9 @@
     "jsonLdKey": "identifier",
     "paths": [
       {
-        "notes": "Other Standard Identifier (LCCN?) (Canceled)",
-        "marc": "024",
-        "subfields": [ "z" ]
-      },
-      {
         "notes": "Report No.",
         "marc": "027",
         "subfields": [ "a" ]
-      },
-      {
-        "notes": "Report No. (Canceled)",
-        "marc": "027",
-        "subfields": [ "z" ]
       },
       {
         "notes": "Publisher No.",
@@ -293,24 +283,40 @@
         "subfields": [ "a" ]
       },
       {
+        "marc": "086",
+        "notes": "Government Document Classification Number",
+        "subfields": [ "a" ]
+      },
+      {
+        "marc": "074",
+        "notes": "GPO Item Number",
+        "subfields": [ "a" ]
+      }
+    ]
+  },
+  "Identifier (Canceled)": {
+    "pred": "dcterms:identifier",
+    "jsonLdKey": "identifier",
+    "paths": [
+      {
+        "notes": "Other Standard Identifier (LCCN?) (Canceled)",
+        "marc": "024",
+        "subfields": [ "z" ]
+      },
+      {
+        "notes": "Report No. (Canceled)",
+        "marc": "027",
+        "subfields": [ "z" ]
+      },
+      {
         "notes": "System Control Number (Canceled)",
         "marc": "035",
         "subfields": [ "z" ]
       },
       {
         "marc": "086",
-        "notes": "Government Document Classification Number",
-        "subfields": [ "a" ]
-      },
-      {
-        "marc": "086",
         "notes": "Government Document Classification Number (Canceled)",
         "subfields": [ "z" ]
-      },
-      {
-        "marc": "074",
-        "notes": "GPO Item Number",
-        "subfields": [ "a" ]
       },
       {
         "marc": "074",
