SCC-2206 Add clarifications regarding n fieldTag
Some fields with the "n" `fieldTag` serve different purposes. If the field is a 843 field it represents a Format, and the `fieldTag` should be ignored. If not it is a Note field and should be treated as such.

--- a/mappings/recap-discovery/field-mapping-holding.json
+++ b/mappings/recap-discovery/field-mapping-holding.json
@@ -84,13 +84,14 @@
         "jsonLdKey": "format",
         "paths": [
             {
-                "notes": "Drawn from fieldTag 'i'"
+                "marc": "843",
+                "subfields": [
+                    "a"
+                ],
+                "notes": "With 843 present, fieldTag may be i or n"
             },
             {
-                "marc": "852",
-                "subfields": [
-                    "m"
-                ]
+                "notes": "Drawn from fieldTag 'i'"
             }
         ]
     },
@@ -99,7 +100,7 @@
         "jsonLdKey": "notes",
         "paths": [
             {
-                "notes": "Drawn from fieldTag 'n'"
+                "notes": "Drawn from fieldTag 'n', but not if marc field is 843"
             }
         ]
     },
