SCC-2236 Add call number prefix and suffix fields
This adds in some `852` subfields that are missing in the Item mapping. These are present in the classic catalog representation of these items and need to be displayed in SCC

--- a/mappings/recap-discovery/field-mapping-item.json
+++ b/mappings/recap-discovery/field-mapping-item.json
@@ -47,7 +47,11 @@
     "jsonLdKey": "shelfMark",
     "paths": [
       {
-        "notes": "Join 852$h and fieldTag 'v' value (if available) with a space"
+        "marc": "852",
+        "subfields": [
+          "k", "h", "i"
+        ],
+        "notes": "Join 852 $k $h $i fields and fieldTag 'v' value (if available) with a space"
       },
       {
         "marc": "945",
