Add holdingPrefix to nypl-source-mapping

--- a/mappings/recap-discovery/nypl-source-mapping.json
+++ b/mappings/recap-discovery/nypl-source-mapping.json
@@ -2,6 +2,7 @@
   "sierra-nypl": {
     "organization": "nyplOrg:0001",
     "bibPrefix": "b",
+    "holdingPrefix": "h",
     "itemPrefix": "i"
   },
   "recap-pul": {
