--- a/mappings/recap-discovery/field-mapping-bib.json
+++ b/mappings/recap-discovery/field-mapping-bib.json
@@ -769,7 +769,8 @@
         "subfields": [ "y" ]
       },
       {
-        "notes": "OR 001 if 003 == 'OCoLC' OR 035 if 'OCoLC' in 035 $a"
+        "marc": "035",
+        "subfields": [ "a" ]
       }
     ]
   },
