--- a/mappings/recap-discovery/field-mapping-item.json
+++ b/mappings/recap-discovery/field-mapping-item.json
@@ -156,6 +156,16 @@
       }
     ]
   },
+  "ReCAP Customer Code": {
+    "pred": "nypl:recapCustomerCode",
+    "jsonLdKey": "recapCustomerCode",
+    "paths": [
+      {
+        "marc": "900",
+        "subfields": [ "b" ]
+      }
+    ]
+  },
   "Suppressed": {
     "pred": "nypl:suppressed",
     "jsonLdKey": "suppressed",
