Fix mistake SubjectLiteral -> parallelSubjectLiteral

--- a/mappings/recap-discovery/field-mapping-bib.json
+++ b/mappings/recap-discovery/field-mapping-bib.json
@@ -906,7 +906,7 @@
   },
   "Parallel Subject Literal": {
     "pred": "nypl:parallelSubjectLiteral",
-    "jsonLdKey": "SubjectLiteral",
+    "jsonLdKey": "parallelSubjectLiteral",
     "paths": [
       {
         "marc": "880",
