--- a/mappings/recap-discovery/field-mapping-bib.json
+++ b/mappings/recap-discovery/field-mapping-bib.json
@@ -145,10 +145,12 @@
         "subfields": [ "a", "b", "c", "q", "d", "j" ]
       },
       {
-        "marc": "110"
+        "marc": "110",
+        "excludedSubfields": [ "0", "6" ]
       },
       {
-        "marc": "111"
+        "marc": "111",
+        "excludedSubfields": [ "0", "6" ]
       }
     ]
   },
@@ -249,7 +251,8 @@
     "jsonLdKey": "editionStatement",
     "paths": [
       {
-        "marc": "250"
+        "marc": "250",
+        "excludedSubfields": [ "0", "6" ]
       }
     ]
   },
