add BSD properties

--- a/mappings/recap-discovery/field-mapping-item.json
+++ b/mappings/recap-discovery/field-mapping-item.json
@@ -19,9 +19,7 @@
       },
       {
         "marc": "876",
-        "subfields": [
-          "j"
-        ],
+        "subfields": ["j"],
         "nyplSources": ["recap-pul", "recap-col"]
       }
     ]
@@ -35,9 +33,7 @@
       },
       {
         "marc": "876",
-        "subfields": [
-          "p"
-        ],
+        "subfields": ["p"],
         "nyplSources": ["recap-pul", "recap-col"]
       }
     ]
@@ -48,36 +44,40 @@
     "paths": [
       {
         "marc": "852",
-        "subfields": [
-          "k", "h", "i"
-        ],
+        "subfields": ["k", "h", "i"],
         "notes": "Join 852 $k $h $i fields and fieldTag 'v' value (if available) with a space"
       },
       {
         "marc": "945",
-        "subfields": [ "g" ]
+        "subfields": ["g"]
       }
     ]
+  },
+  "Date Range": {
+    "pred": "nypl:dateRange",
+    "jsonLdKey": "dateRange"
+  },
+  "Date Raw": {
+    "pred": "nypl:dateRaw",
+    "jsonLdKey": "dateRaw"
   },
   "Enumeration Chronology": {
     "pred": "bf:enumerationAndChronology",
     "jsonLdKey": "enumerationChronology",
     "paths": [
-        {
-            "notes": "Standalone representation of the 'v' fieldTag"
-        }
+      {
+        "notes": "Standalone representation of the 'v' fieldTag"
+      }
     ]
   },
   "Physical Location": {
     "pred": "bf:physicalLocation",
     "jsonLdKey": "physicalLocation",
     "paths": [
-        {
-            "marc": "852",
-            "subfields": [
-                "k", "h", "i"
-            ]
-        }
+      {
+        "marc": "852",
+        "subfields": ["k", "h", "i"]
+      }
     ]
   },
   "Carrier type": {
@@ -117,6 +117,10 @@
       }
     ]
   },
+  "Format": {
+    "pred": "nypl:format",
+    "jsonLdKey": "format"
+  },
   "Holding location": {
     "pred": "nypl:holdingLocation",
     "jsonLdKey": "holdingLocation",
@@ -126,7 +130,7 @@
       },
       {
         "marc": "852",
-        "subfields": [ "b" ]
+        "subfields": ["b"]
       }
     ]
   },
@@ -162,7 +166,7 @@
     "paths": [
       {
         "marc": "900",
-        "subfields": [ "b" ]
+        "subfields": ["b"]
       }
     ]
   },
@@ -174,5 +178,17 @@
         "notes": "suppressed or if location.code ends in 9. if bib's suppressed value is true, then item is suppressed"
       }
     ]
+  },
+  "Type": {
+    "pred": "rdfs:type",
+    "jsonLdKey": "type"
+  },
+  "Volume Range": {
+    "pred": "nypl:volumeRange",
+    "jsonLdKey": "volumeRange"
+  },
+  "Volume Raw": {
+    "pred": "nypl:volumeRaw",
+    "jsonLdKey": "volumeRaw"
   }
 }
