Add two new field-mapping props for Aeon linking

--- a/mappings/recap-discovery/field-mapping-bib.json
+++ b/mappings/recap-discovery/field-mapping-bib.json
@@ -8,6 +8,14 @@
       }
     ]
   },
+  "Aeon URL": {
+    "pred": "nypl:aeonUrl",
+    "paths": [
+      {
+        "notes": "856 $u matching Aeon base URLs"
+      }
+    ]
+  },
   "Alternative title": {
     "pred": "dcterms:alternative",
     "jsonLdKey": "titleAlt",
