Add dueDate to item field mapping
This is v1.65

https://jira.nypl.org/browse/SCC-3040

--- a/mappings/recap-discovery/field-mapping-item.json
+++ b/mappings/recap-discovery/field-mapping-item.json
@@ -106,6 +106,15 @@
       }
     ]
   },
+  "Due date": {
+    "pred": "nypl:dueDate",
+    "jsonLdKey": "dueDate",
+    "paths": [
+      {
+        "notes": "Use item.status.dueDate, stripped of time"
+      }
+    ]
+  },
   "Enumeration Chronology": {
     "pred": "bf:enumerationAndChronology",
     "jsonLdKey": "enumerationChronology",
