Add new bib oclc mapping: 001
https://jira.nypl.org/browse/SCC-3248

--- a/mappings/recap-discovery/field-mapping-bib.json
+++ b/mappings/recap-discovery/field-mapping-bib.json
@@ -813,6 +813,9 @@
         "marc": "035",
         "subfields": [ "a" ],
         "notes": "Reject if not prefixed '(OCoLC)'"
+      },
+      {
+        "marc": "001"
       }
     ]
   },
