Add item.formatLiteral mapping

--- a/mappings/recap-discovery/field-mapping-item.json
+++ b/mappings/recap-discovery/field-mapping-item.json
@@ -128,6 +128,10 @@
     "pred": "nypl:format",
     "jsonLdKey": "format"
   },
+  "Format literal": {
+    "pred": "nypl:formatLiteral",
+    "jsonLdKey": "formatLiteral"
+  },
   "Holding location": {
     "pred": "nypl:holdingLocation",
     "jsonLdKey": "holdingLocation",
