Add m2CustomerCode item field mapping

--- a/mappings/recap-discovery/field-mapping-item.json
+++ b/mappings/recap-discovery/field-mapping-item.json
@@ -191,6 +191,10 @@
       }
     ]
   },
+  "M2 Customer Code": {
+    "pred": "nypl:m2CustomerCode",
+    "jsonLdKey": "m2CustomerCode"
+  },
   "Suppressed": {
     "pred": "nypl:suppressed",
     "jsonLdKey": "suppressed",
